# Pong-Clone

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: actor.cpp  ball.cpp  bat.cpp  batSystem.cpp  bootscreen.cpp  collision.cpp  collisionSystem.cpp  debugText.cpp  gamePadUtils.cpp  gameScreen.cpp  gameState.cpp  gameStateSystem.cpp  inputHandler.cpp  main.cpp
src/headers/: actor.h  alias.h  ball.h  bat.h  batSystem.h  bootscreen.h  collision.h  collisionSystem.h  command.h  dataStruct.h  debugText.h  eBallstate.h  gamePadUtils.h  gameScreen.h  gameState.h  gameStateSystem.h  inputHandler.h  tuple.h
src/sfx/wallhitsfx.band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
src/sfx/wallhitsfx.band/Resources/: ProjectInformation.plist
